Removed some models, QOL changes to fixedpoint, mix, phasespace files. Added shift

--- a/plotting_extras.ipynb
+++ b/plotting_extras.ipynb
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "27a09edb-f3b8-4ee1-84e4-c413f9b8bf60",
    "metadata": {},
    "outputs": [
@@ -629,14 +629,13 @@
     "sns.set_style(\"whitegrid\")\n",
     "\n",
     "# dictionary with methods and times\n",
-    "dicte_ = {\"DNF\": 0.025,\n",
-    "          \"GSGM\": 0.120,\n",
-    "          'DDPM': 0.13,\n",
-    "          \"Score\": 0.17,\n",
-    "          \"CFG\": 0.22,\n",
-    "          \"CNF\": 0.5,\n",
-    "          r'$FM_{midpoint}$': 0.5,\n",
-    "          r'$FM_{dopri5}$': 0.8        \n",
+    "dicte_ = {\"DNF\": 0.032,\n",
+    "          r'DDPM_{T=100}': 0.239,\n",
+    "          \"GSGM\": 0.240,\n",
+    "          \"Score\": 0.354,\n",
+    "          r'$FM_{midpoint}$': 0.422,\n",
+    "          r'DDPM_{T=200}': 0.488,\n",
+    "          \"CNF\": 0.510\n",
     "}\n",
     "\n",
     "\n",
@@ -745,6 +744,58 @@
     "\n",
     "# Show the plot\n",
     "#plt.savefig(\"Resampling_Fraction_Comparison.pdf\",bbox_inches=\"tight\")\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03935051",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "\n",
+    "sns.set_style(\"whitegrid\")\n",
+    "\n",
+    "# dictionary with methods and times\n",
+    "dicte_ = {\"DNF\": 1.914773327963693e-06,\n",
+    "          r'DDPM_{T=100}': 1.4250596932002476e-05,\n",
+    "          \"GSGM\": 1.4168384415762766e-05,\n",
+    "          \"Score\": 2.1123785291399275e-05,\n",
+    "          r'$FM_{midpoint}$': 4.3492001465388706e-05,\n",
+    "          \"CNF\": 8.444329125540597e-05,\n",
+    "          \"Geant\": 0.00203049446\n",
+    "}\n",
+    "\n",
+    "\n",
+    "labels = list(dicte_.keys())\n",
+    "heights = list(dicte_.values())\n",
+    "\n",
+    "colors = sns.color_palette(\"viridis\", len(labels))\n",
+    "\n",
+    "plt.figure(figsize=(13, 6))\n",
+    "bars = plt.bar(labels, heights, color=colors, edgecolor='black', linewidth=1.2)\n",
+    "\n",
+    "for bar in bars:\n",
+    "    plt.text(bar.get_x() + bar.get_width()/2, bar.get_height() + 0.03, \n",
+    "             f'~{bar.get_height():.2f}', ha='center', fontsize=18, fontweight='bold')\n",
+    "\n",
+    "\n",
+    "plt.ylim(0, 1.1)  # Extra space for labels\n",
+    "plt.xticks(rotation=45, fontsize=25, ha=\"right\")  \n",
+    "plt.yticks(fontsize=20)\n",
+    "plt.ylabel(r\"Generation Time $O(s)$\", fontsize=25, labelpad=15)\n",
+    "\n",
+    "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
+    "\n",
+    "for spine in plt.gca().spines.values():\n",
+    "    spine.set_color('black')  \n",
+    "    spine.set_linewidth(1.)  \n",
+    "\n",
+    "#plt.savefig(\"Generation_Time_Comparison.pdf\",bbox_inches=\"tight\")\n",
     "plt.show()\n"
    ]
   },
